<resources>
    <string name="app_name">Universidade GESUAS</string>
    <string name="bem_vindo">Olá, seja bem vindo à Universidade GESUAS!</string>
    <string name="beea_apresentacao">Sou a Beea e irei te acompanhar em sua jornada de aprendizado</string>
    <string name="comecar">Começar agora</string>
    <string name="entrar">Já tenho uma conta</string>
    <string name="crie_conta">Crie uma conta do Universidade GESUAS</string>
    <string name="nome">Nome</string>
    <string name="nome_usuario">Nome de usuário</string>
    <string name="nome_usuario_regras">Apenas letras, números e underlines</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="data_nascimento">Data de nascimento</string>
    <string name="dia">Dia</string>
    <string name="mes">Mês</string>
    <string name="ano">Ano</string>
    <string name="cadastro_pessoa_fisica">Cadastro de Pessoa Física (CPF)</string>
    <string name="cpf">CPF</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confirme_senha">Confirme sua senha</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="logar">Entrar</string>
    <string name="ola">OLÁ, </string>
    <string name="boasVindas">Seja Bem Vindo(a) Ao Universidade GESUAS!</string>
    <string name="cursosEmAndamento">CURSOS EM ANDAMENTO</string>
    <string name="verTodos">Ver todos</string>
    <string name="materiaisComplementares">MATERIAIS COMPLEMENTARES</string>
    <string name="capaDescricao">Capa do curso</string>
    <string name="iconeDescricao">Capa do material</string>
    <string name="iniciar">COMEÇAR</string>
    <string name="sequencia">QUE TAL COMEÇAR SUA SEQUÊNCIA?</string>
    <string name="beeaEstudandoDescricao">Abelha Beea Estudando</string>
    <string name="gesuasDescricao">Logo GESUAS</string>
    <string name="inicio">INÍCIO</string>
    <string name="comunidade">COMUNIDADE</string>
    <string name="ranking"> RANKING</string>
    <string name="sairConta">Sair da Conta</string>
    <string name="cadastroAdmin">Cadastrar novo administrador</string>"
    <string name="pontos">Como ganhar pontos</string>
    <string name="perfil">Meu Perfil</string>
    <string name="menu">MENU</string>

    <!-- FRASES DA BEEA -->
    <!-- Brava -->
    <string name="beea_brava_1">Sabia que as abelhas trabalham todo dia?\n\nMenos você, pelo visto...</string>
    <string name="beea_brava_2">Cadê você??\n\nJá fazem dias que não nos vemos!</string>
    <string name="beea_brava_3">Chega de corpo mole!\n\nEntre mais no app ou vou ser obrigada a apitar falta!!</string>

    <!-- Triste -->
    <string name="beea_triste_1">Já estava com saudades...\n\nVamos interagir mais?</string>
    <string name="beea_triste_2">Ninguém apareceu para o treino hoje.\n\nOnde foi parar a nossa determinação?</string>

    <!-- Preocupada -->
    <string name="beea_preocupada_1">Você caiu algumas posições no ranking.</string>
    <string name="beea_preocupada_2">Pressão total na área!\n\nUm minutinho de estudo agora salva o nosso campeonato.</string>

    <!-- Orgulhosa -->
    <string name="beea_orgulhosa_1">Você subiu no ranking!\n\nParabéns!!</string>
    <string name="beea_orgulhosa_2">Melhor do mundo!!\n\nNem o melhor camisa 10 conseguiria manter essa consistência.</string>

    <!-- Feliz -->
    <string name="beea_feliz_1">Você está com muitos pontos!!\n\nQue tal resgatar mais?</string>
    <string name="beea_feliz_2">O placar tá lindo e o mel tá garantido!!</string>
    <string name="beea_feliz_3">Já viu que tem curso novo?</string>
    <string name="beea_feliz_4">Vamos estudar mais um pouco hoje?</string>

    <!-- Hexa -->
    <string name="beea_hexa_1">Você está com uma sequência de 5 dias!!\n\nRumo ao Hexa!!</string>

    <!-- Neutra -->
    <string name="beea_neutra_1">Que tal começar um novo curso?</string>
    <string name="beea_neutra_2">Vamos estudar mais um pouco hoje?</string>

</resources>