<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgTela"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:context=".CadastroAdminActivity">

        <LinearLayout
            android:id="@+id/conjunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp">
            <ImageView
                android:id="@+id/logo_GESUAS"
                android:layout_width="266dp"
                android:layout_height="88dp"
                android:src="@drawable/logo_universidade_gesuas"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/txtPrimary"
                android:textSize="18sp"
                android:text="Cadastrar Novo Administrador"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_voltar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back_arrow"
            app:tint="@color/txtPrimary"
            android:contentDescription="Voltar"
            android:onClick="click_back"/>

        <LinearLayout
            android:id="@+id/infCad"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/conjunto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="@color/txtPrimary"
                android:text="@string/nome"/>
            <EditText
                android:id="@+id/nome_res"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                android:background="@drawable/campo_texto"
                android:hint="@string/nome_completo"
                android:paddingHorizontal="12dp"
                android:textColor="@color/txtPrimary"/>

            <TextView
                android:id="@+id/nome_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="@string/nome_usuario"
                android:textColor="@color/txtPrimary"/>
            <EditText
                android:id="@+id/nome_usuario_res"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                android:background="@drawable/campo_texto"
                android:hint="@string/nome_usuario"
                android:paddingHorizontal="12dp"
                android:textColor="@color/txtPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_usuario_regras"
                android:textColor="@color/txtPrimary"
                android:textSize="13sp"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:id="@+id/nascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="19sp"
                android:text="@string/data_nascimento"
                android:textColor="@color/txtPrimary"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/dia_res"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_marginTop="3dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:minHeight="45dp"
                    android:background="@drawable/campo_texto"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/dia"
                    android:gravity="center"
                    android:textColor="@color/txtPrimary"/>
                <EditText
                    android:id="@+id/mes_res"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_marginTop="3dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:minHeight="45dp"
                    android:background="@drawable/campo_texto"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/mes"
                    android:gravity="center"
                    android:textColor="@color/txtPrimary"/>
                <EditText
                    android:id="@+id/ano_res"
                    android:inputType="number"
                    android:maxLength="4"
                    android:layout_marginTop="3dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:minHeight="45dp"
                    android:background="@drawable/campo_texto"
                    android:hint="@string/ano"
                    android:gravity="center"
                    android:textColor="@color/txtPrimary"/>
            </LinearLayout>

            <TextView
                android:id="@+id/cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:text="@string/cadastro_pessoa_fisica"
                android:textColor="@color/txtPrimary"/>
            <EditText
                android:id="@+id/cpf_res"
                android:inputType="number"
                android:maxLength="11"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="43dp"
                android:background="@drawable/campo_texto"
                android:hint="@string/cpf"
                android:paddingHorizontal="12dp"
                android:textColor="@color/txtPrimary"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="@color/txtPrimary"/>
            <EditText
                android:id="@+id/email_res"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                android:background="@drawable/campo_texto"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="12dp"
                android:textColor="@color/txtPrimary"/>

            <TextView
                android:id="@+id/senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:text="@string/senha"
                android:textColor="@color/txtPrimary"/>
            <EditText
                android:id="@+id/senha_res"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                android:background="@drawable/campo_texto"
                android:inputType="textPassword"
                android:hint="@string/senha"
                android:paddingHorizontal="12dp"
                android:textColor="@color/txtPrimary"/>

            <TextView
                android:id="@+id/senha_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:text="@string/confirme_senha"
                android:textColor="@color/txtPrimary"/>
            <EditText
                android:id="@+id/senha_conf_res"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                android:background="@drawable/campo_texto"
                android:inputType="textPassword"
                android:hint="@string/confirme_senha"
                android:paddingHorizontal="12dp"
                android:textColor="@color/txtPrimary"/>
        </LinearLayout>

        <Button
            android:id="@+id/criar_conta_admin"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/infCad"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            style="@style/botao1"
            android:text="Salvar Administrador"
            android:onClick="click_cadastrar_admin"/>

    </RelativeLayout>
</ScrollView>